--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -162,35 +162,36 @@ la disparition de deux de ses collègues.</cite><span>
         <a id="partie25">
 				<img src="https://drive.google.com/uc?id=1N-0u3kcgBDjdVGHWJOn-iWydSy7Jccdl" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti26">
+				<img src="https://drive.google.com/uc?id=1MVtV8oTv1x3Z4IPpeoF8lHN2w6v_cAhB" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie27">
+				<img src="https://drive.google.com/uc?id=150CBsfQDvZdFnGQg5VU1ZojGkBG4qGRO" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie28">
+				<img src="https://drive.google.com/uc?id=1F_SdcpaxfClYGZs0d0vbkVVl80BgPQFS" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie29">
+				<img src="https://drive.google.com/uc?id=1BXz1ZVq79gfJBj8qi9hqDAZo3Q6m97SX" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+        <a id="partie30">
+				<img src="https://drive.google.com/uc?id=1pOBoQFQqpkBIO6fCnC7BbH061a8IQ4GU" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti31">
+				<img src="https://drive.google.com/uc?id=16VHcyQdOx_4GLhwzFEartkbQcD0t9aTK" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie32">
+				<img src="https://drive.google.com/uc?id=1pfnGsNBOjroSd-wkWrcRngDNr8KnmKuE" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie33">
+				<img src="https://drive.google.com/uc?id=1TxdWz1X_PCsgbe6J0RRRa7QueSW0qrLf" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie34">
+				<img src="https://drive.google.com/uc?id=1JvN2cJwsvMEsyXjxyQlKryVP2_tVfSny" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie35">
+				<img src="image_site/Dans le béton-Mamoste Dîn34.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+		
 	<a id="parti16">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
