--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -192,35 +192,35 @@ la disparition de deux de ses collègues.</cite><span>
         <a id="partie35">
 				<img src="image_site/Dans le béton-Mamoste Dîn34.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 		
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti36">
+				<img src="https://drive.google.com/uc?id=15--hQnfX-yVW2C_JDoAI3Mb8GlpDuxQ8" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie37">
+				<img src="https://drive.google.com/uc?id=1RHawcsfqGh2UKPWTvkeDaTU4n1sN6_Qn" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie38">
+				<img src="https://drive.google.com/uc?id=1w_D1IVvdsevgy7x1bR1ywg_0nHB8ovk7" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie39">
+				<img src="image_site/Dans le béton-Mamoste Dîn38.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie40">
+				<img src="https://drive.google.com/uc?id=1du_clFc3cPY-5RC5teTlPHQH7kFp51JK" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti41">
+				<img src="https://drive.google.com/uc?id=1z-clkqOnmA9kj7PjFS8AaReItciSRyxH" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie42">
+				<img src="https://drive.google.com/uc?id=1wiPyDTmBRfB8bHIccJxsto3TvnuuNM1S" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie43">
+				<img src="https://drive.google.com/uc?id=1mmp03D_fZCwxbFWrBZcFDPb5X1oaipo6" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie44">
+				<img src="https://drive.google.com/uc?id=1p1fAJkQZMqXoinlrMSQHpQUNTnyAhBR0" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie45">
+				<img src="https://drive.google.com/uc?id=1m7pDxVvp7UYmgHW7xI0lSQYWKu1dBp1r" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
 	<a id="parti16">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
