--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -222,46 +222,46 @@ la disparition de deux de ses collègues.</cite><span>
         <a id="partie45">
 				<img src="https://drive.google.com/uc?id=1m7pDxVvp7UYmgHW7xI0lSQYWKu1dBp1r" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti46">
+				<img src="https://drive.google.com/uc?id=1ngg94-qgZ7ZFHnT5qP-r1xJVC2GOKDqe" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie47">
+				<img src="https://drive.google.com/uc?id=1SS0zp0D5hfcq_XGv108mktqd8HM49Pr5" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie48">
+				<img src="https://drive.google.com/uc?id=1kqrPlhkIVJK2Hktg-BcWhLhLoas0FagS" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie49">
+				<img src="image_site/Dans le béton-Mamoste Dîn48.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie50">
+				<img src="https://drive.google.com/uc?id=1Y_XV10NZDnBgZq2loi1yXClkS5knS94Q" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti51">
+				<img src="https://drive.google.com/uc?id=1VHJAMGEQ28smfDEzCrchKu9JJu1jx4zJ" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie52">
+				<img src="image_site/Dans le béton-Mamoste Dîn51.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie53">
+				<img src="https://drive.google.com/uc?id=1LVWuGSoSqgZ4q_3E35LJSQEmCgdB9dnd" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie54">
+				<img src="https://drive.google.com/uc?id=1wxSQ_lnnjlGIsUagwpmFBvXuQRFE5KK_" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie55">
+				<img src="https://drive.google.com/uc?id=1_f_G35s22OafrxpJebdTQAsbRKrbOYAB" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti56">
+				<img src="https://drive.google.com/uc?id=10I_xonplDpot9slDJ5OxCNZrZ-6XLSJJ" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie57">
+				<img src="https://drive.google.com/uc?id=1NJA3CF-uA6vrQfOecVc_rRNgdG0NWf7X" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie58">
+				<img src="https://drive.google.com/uc?id=1nWedkj7A6mWqk1cCRdWOAxv3srSIkNCY" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
+         <a id="partie59">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
         <a id="partie20">
@@ -310,6 +310,50 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie20">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+
+<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+		
 		
 </div>
 
