--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -101,7 +101,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
           <a id="partie5">
 				<a href="https://zupimages.net/viewer.php?id=23/27/gfsl.jpg"><img src="https://zupimages.net/up/23/27/gfsl.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" /></a> 
-        
+</a>	        
    <a id="parti6">
 				<img src="https://drive.google.com/uc?id=1_xq79qpwAcXc64ODqhxM1KvhhwZa5O7x" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -116,7 +116,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
           <a id="partie10">
 				<img src="https://drive.google.com/uc?id=1K9PSqI7mxnjFN0o1U5yyMPBgkQHdeniM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
    <a id="parti11">
 				<img src="https://drive.google.com/uc?id=1OEFtC6qoe27xdk4Xa73QHZIOQOO_nEf3" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -131,7 +131,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
           <a id="partie15">
 				<img src="https://drive.google.com/uc?id=1Vc9JDo44nOefmDjx8G9Krdc-ohd4cXHI" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti16">
 				<img src="https://drive.google.com/uc?id=1adob1SrJ1RurHwQML0sLzEOYLoZEzmlc" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -146,7 +146,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie20">
 				<img src="https://drive.google.com/uc?id=10OSEVDF7Yc5kWWKAzyDvxmoirg0tOuQ2" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti21">
 				<img src="https://drive.google.com/uc?id=17QhzEK6CE2DgPl_v1U0U4d3ZbLkFQbtv" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -161,7 +161,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie25">
 				<img src="https://drive.google.com/uc?id=1N-0u3kcgBDjdVGHWJOn-iWydSy7Jccdl" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti26">
 				<img src="https://drive.google.com/uc?id=1MVtV8oTv1x3Z4IPpeoF8lHN2w6v_cAhB" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -176,7 +176,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie30">
 				<img src="https://drive.google.com/uc?id=1pOBoQFQqpkBIO6fCnC7BbH061a8IQ4GU" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
-
+</a>	
 	<a id="parti31">
 				<img src="https://drive.google.com/uc?id=16VHcyQdOx_4GLhwzFEartkbQcD0t9aTK" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -191,7 +191,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie35">
 				<img src="image_site/Dans le béton-Mamoste Dîn34.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-		
+	</a>		
 	<a id="parti36">
 				<img src="https://drive.google.com/uc?id=15--hQnfX-yVW2C_JDoAI3Mb8GlpDuxQ8" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -206,7 +206,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie40">
 				<img src="https://drive.google.com/uc?id=1du_clFc3cPY-5RC5teTlPHQH7kFp51JK" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti41">
 				<img src="https://drive.google.com/uc?id=1z-clkqOnmA9kj7PjFS8AaReItciSRyxH" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -221,7 +221,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie45">
 				<img src="https://drive.google.com/uc?id=1m7pDxVvp7UYmgHW7xI0lSQYWKu1dBp1r" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti46">
 				<img src="https://drive.google.com/uc?id=1ngg94-qgZ7ZFHnT5qP-r1xJVC2GOKDqe" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -236,12 +236,16 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie50">
 				<img src="https://drive.google.com/uc?id=1Y_XV10NZDnBgZq2loi1yXClkS5knS94Q" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti51">
 				<img src="https://drive.google.com/uc?id=1VHJAMGEQ28smfDEzCrchKu9JJu1jx4zJ" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie52">
 				<img src="image_site/Dans le béton-Mamoste Dîn51.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+</a>
+<a id="partie52bis">
+				<img src="https://drive.google.com/uc?id=1trOf_LiJsUvXbjp5zhfOBbr0_zya4B-0" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				 
 			</a>
          <a id="partie53">
 				<img src="https://drive.google.com/uc?id=1LVWuGSoSqgZ4q_3E35LJSQEmCgdB9dnd" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
@@ -251,7 +255,7 @@ la disparition de deux de ses collègues.</cite><span>
 			</a>	
         <a id="partie55">
 				<img src="https://drive.google.com/uc?id=1_f_G35s22OafrxpJebdTQAsbRKrbOYAB" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-
+</a>	
 	<a id="parti56">
 				<img src="https://drive.google.com/uc?id=10I_xonplDpot9slDJ5OxCNZrZ-6XLSJJ" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
@@ -262,98 +266,131 @@ la disparition de deux de ses collègues.</cite><span>
 				<img src="https://drive.google.com/uc?id=1nWedkj7A6mWqk1cCRdWOAxv3srSIkNCY" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie59">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1k-k2B_RnekgNUAvS0Q2MpxqzF8DyjdQ9" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie60">
+				<img src="https://drive.google.com/uc?id=1Num1H7o4R78odU0NLviWAC8ZquI50XfX" alt="dans_le_beton_mamoste_din" width="850" height="auto" /></a>	
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti61">
+				<img src="https://drive.google.com/uc?id=1LczM97dPLrwaXKexxnWAedBtD8LZKLep" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie62">
+				<img src="https://drive.google.com/uc?id=1E3XY4iHglaBcNf8PbYIIjNR-JvuqTdoM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie63">
+				<img src="image_site/Dans le béton-Mamoste Dîn63.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie64">
+				<img src="https://drive.google.com/uc?id=1DR5NSUagOOKSoDYA_dxYueJg_QGBXG0F" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie65">
+				<img src="https://drive.google.com/uc?id=15tF_peYiuoi-fkzMkHeCORbgH9qtb5z5" alt="dans_le_beton_mamoste_din" width="850" height="auto" /></a>	
 
-	<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie66">
+				<img src="https://drive.google.com/uc?id=16Aoi33Ya72IBzv7RcBeeYGtlWqRZpkZ-" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie67">
+				<img src="https://drive.google.com/uc?id=1ofPGA5_kR-MU44KoWLz2cYbPk35O89T-" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie68">
+				<img src="https://drive.google.com/uc?id=1VETn9Yg_wd34_42lkPQN4DelN7tIri5j" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
-<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
-<a id="parti16">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+        <a id="partie69">
+				<img src="https://drive.google.com/uc?id=1X3y8IdzzydiJgJe9wgP3qT7FrwZw93bm" alt="dans_le_beton_mamoste_din" width="850" height="auto" /></a>	
 
-<a id="parti16">
+	<a id="parti70">
+				<img src="https://drive.google.com/uc?id=1qWlzcm24Yeg5VkcYnZZYebrweeCgS44f" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie71">
+				<img src="https://drive.google.com/uc?id=1Zgh77xZg1sbzLAqVywPPZTUiVZVaeV6h" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie72">
+				<img src="https://drive.google.com/uc?id=1wfit0JoyXnclxGL42jrnQ9NUn4mz5gG2" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie73">
+				<img src="https://drive.google.com/uc?id=11oYPBlqOn3-r-tvNV88azZ1InGZ5LMOQ" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie74">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
+<a id="parti75">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
+         <a id="partie76">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
+         <a id="partie77">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
+         <a id="partie78">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
+        <a id="partie79">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
+<a id="parti80">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie81">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie82">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie83">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie84">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />	</a>		
+
+<a id="parti85">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie86">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie87">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie88">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie89">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />	</a>		
+
+<a id="parti90">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie91">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie92">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie93">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie94">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
+
+<a id="parti95">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie96">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie97">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie98">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie99">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
-		
+					</a>
+         <a id="partie100">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie99">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
 		
 </div>
 
