--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -308,89 +308,79 @@ la disparition de deux de ses collègues.</cite><span>
 				<img src="https://drive.google.com/uc?id=1wfit0JoyXnclxGL42jrnQ9NUn4mz5gG2" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie73">
-				<img src="https://drive.google.com/uc?id=11oYPBlqOn3-r-tvNV88azZ1InGZ5LMOQ" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="image_site/Dans le béton-Mamoste Dîn73.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
         <a id="partie74">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
+				<img src="https://drive.google.com/uc?id=1DkHpLakqnVVI9CLVFmZ9vrRG36O4LPJv" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
 <a id="parti75">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1asBMBS41YIGNO43Txx4aRrbdqa0o-A3o" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie76">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1S0Zgg7CFfxSm8CppvAjM7Qim3vYDPdqv" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie77">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1_EPgR7VJ4VD6PNLNjhoSQWYyTLBrnebv" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie78">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1ZMAkBISd7q1Mj4efai903P5lUYScPyDB" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
         <a id="partie79">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
+				<img src="image_site/Dans le béton-Mamoste Dîn79.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
 <a id="parti80">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1ub7qCpn37sXK7Hcu8YL6ZgGlmhfZye8v" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie81">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1dteYaPT_pzJuYBVRAwkjnloIK99ap9D4" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie82">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1wwZQu7_HOF9TuRACCOpIuOaPq0vClrkM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie83">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=13X7Zq33Uk_Gg5x3nIkDwH410uL8FXcdn" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
         <a id="partie84">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />	</a>		
+				<img src="https://drive.google.com/uc?id=1OrQ1zdyVyMCTDi9AL5NwsSqxdXGTSt80" alt="dans_le_beton_mamoste_din" width="850" height="auto" />	</a>		
 
 <a id="parti85">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1BFWj24oI8npar6kPWp74MQQcbuk0my_g" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie86">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1yWavjdzthMImSqgB5S327heuCssBtNVt" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie87">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1SoMeDg5_jqX5zGrzyTUd-IRD6eMp58hW" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie88">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1Ab8b-r-E7vL3YS7nSow0NKiNjGpRgKM9" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
         <a id="partie89">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />	</a>		
+				<img src="https://drive.google.com/uc?id=1ukZhEakKyyejJQvrqsvEsUUJC3HGORep" alt="dans_le_beton_mamoste_din" width="850" height="auto" />	</a>		
 
 <a id="parti90">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1xGT4l5PiOOHu433YhrI7bp3ID586S7wI" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie91">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1DHmhVe4SUMY0AZukG6UQbnQ8aY4rmoTu" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie92">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1mtja-rVV-DVbt7k8R58mxdOi9OVtYk3c" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie93">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="image_site/Dans le béton-Mamoste Dîn93.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
         <a id="partie94">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
+				<img src="image_site/Dans le béton-Mamoste Dîn94.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		</a>	
 
 <a id="parti95">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1b8dPw7IASttA64boMfvlPGSXYi7xPhRz" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie96">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1u1eg_xpY187s4x3XQieJorMOH9sdfO3t" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
          <a id="partie97">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1SYFcYW3vYF0cy_CpD7sDILEinpxZoPFC" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie98">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>	
-        <a id="partie99">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
-					</a>
-         <a id="partie100">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
-			</a>	
-        <a id="partie99">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+	
 		
 </div>
 
